Changes in version 1-4-0 (03/18/2016)
    * The transaction class lost slot transactionInfo (we use the 
      itemsetInfo slot now). Note that you may have to rebuild some 
      transaction sets if you are using transactionInfo.
    * Bugfix for combining item matrices with 0 rows (reported by C. Buchta).
    * Bugfix for itemLabel recoding in is.subset (reported by sjain777). 
    * Bugfix for NAMESPACE export for %in%
    * is.redundant: fixed and performance improvement.
    * interestMeasure: performance improvement for "improvement" measure.
    * sort: speed up sort by always sorting NAs last.
    * head: added method head for associations for getting the best rules 
      according to an interest measure faster than sorting all the 
      associations first.
    * Groceries: fixed typo in dataset.
    * abbreviate is now a S4 generic with S4 methods.

Changes in version 1-3-1 (12/13/2015)
    * we now require R 2.3.0 so cbind in Matrix works.
    * is.maximal is now also available for rules.
    * added is.significant for rules (uses Fishers exact test with correction).
    * added is.redundant for rules.
    * added support for multi-level analysis (aggregate). 
    * APparameter: confidence shows now NA for frequent itemsets.

Changes in version 1-3-0 (11/11/2015)
    * removed deprecated WRITE and SORT functions.
    * ruleInduction: bug fix for missing confidence values and better checking 
      (by C. Buchta). 
    * subset extraction: added checks, handles now NAs and recycles for logical.
    * read.transactions gained arguments skip and quote and some defaults for
      read and write (uses now quotes and no rownames by default) have changed.
    * itemMatrix: coersion from matrix checks now for 0-1 matrix with a warning.
    * APRIORI and ECLAT report now absolute minimum support.
    * APRIORI: out-of-memory while rule building does now result in an error and
      not a memory fault.